# tidemine

./: deploy.sh  pyproject.toml  tide.md
tidecoin_miner/: __init__.py  __main__.py  cli.py  config.py
tidecoin_miner/miner_core/: cpuminer.py  installer.py  process.py  srbminer.py
tidecoin_miner/monitor/: alerts.py  api.py  dashboard.py  stats.py
tidecoin_miner/optimizer/: benchmark.py  hugepages.py  tuner.py
tidecoin_miner/pool_manager/: failover.py  pools.py
tidecoin_miner/systemd/: service.py
tidecoin_miner/wallet/: balance.py  node.py
