[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tidemine"
version = "1.0.0"
description = "Production-grade Tidecoin (TDC) CPU+GPU mining orchestrator optimized for i9 + RTX 5070 Ti"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "psutil>=5.9",
    "pynvml>=11.5",
    "aiohttp>=3.9",
]

[project.scripts]
tidecoin-miner = "tidecoin_miner.cli:app"
tidemine = "tidecoin_miner.cli:app"

[tool.setuptools.packages.find]
include = ["tidecoin_miner*"]
